<resources>
    <string name="app_name">PlusOne</string>
    <string name="winners_for_today">Winners For today!</string>
    <string name="winners">Winners</string>
    <string name="winners_team">Winners Team</string>
    <string name="enter_winners_name">Enter Winners name</string>
    <string name="enter_your_password">Enter Your password</string>
    <string name="remember_me">remember me</string>
    <string name="female">Female</string>
    <string name="notification">Notification</string>
    <string name="splashscreen">SplashScreen</string>
    <string name="login">Login</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="forget_your_password">Forget Your password ?</string>
    <string name="username">"  Username"</string>
    <string name="email_address">"  email address"</string>
    <string name="password">"  password"</string>
    <string name="welcome_to_our_app">Welcome to Plus One !!</string>
    <string name="this_is_home_page">This is Home Page</string>
    <string name="winners_for_today2">Winners For Today</string>
    <string name="enter_winnters_for_today">Enter winnters for today</string>
    <string name="show_winners">show Winners</string>
    <string name="forget_your_password1">Forget your Password !!</string>
    <string name="enter_recovery_email">Enter recovery email</string>
    <string name="send_code">Send Code</string>
    <string name="enter_your_first_number">Enter your first number</string>
    <string name="enter_your_second_number">Enter your second number</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiplication">*</string>
    <string name="division">/</string>
    <string name="result">Result is : </string>
    <string name="calculator_app">Calculator App</string>
    <string name="random_highest_mountains">Random Highest Mountains</string>
    <string name="welcome_to_random_highest_mountains_app">Welcome to Random Highest Mountains APP</string>
    <string name="everest_mountain">Everest Mountain</string>
    <string name="shuffle">Shuffle</string>
    <string name="restaurant">Restaurant</string>
    <string name="what_do_you_want_to_order">What do you want to order ?</string>
    <string name="coffee">Coffee</string>
    <string name="tea">Tea</string>
    <string name="pepsi">Pepsi</string>
    <string name="lemon">Lemon</string>
    <string name="pizza">Pizza</string>
    <string name="burger">Burger</string>
    <string name="chicken">Chicken</string>
    <string name="vegetables">Vegetables</string>
    <string name="order_now">ORDER NOW</string>
    <string name="your_order">Your Order is : </string>
    <string name="_5"> $ 5</string>
    <string name="_10">$ 10</string>
    <string name="_7">$ 7</string>
    <string name="_15">$ 15</string>
    <string name="_70">$ 70</string>
    <string name="_50">$ 50</string>
    <string name="_40">$ 40</string>
    <string name="_30">$ 30</string>
    <string name="don_t_have_an_account_register_now">Don\'t have an account ? Register Now!!</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="male">Male</string>
    <string name="register">Register</string>
    <string name="dog_or_cat_person">Dog Or Cat Quiz</string>
    <string name="when_talking_to_someone_do_you_maintain_eye_contact">- When talking to someone do you maintain eye contact?</string>
    <string name="never">Never</string>
    <string name="always">Always</string>
    <string name="sometimes">Sometimes</string>
    <string name="how_often_do_you_hug_people">How often do you hug people?</string>
    <string name="all_the_times">All the times</string>
    <string name="no">No</string>
    <string name="have_you_ever_made_out_with_somebody_you_just_met_that_day">Have you ever made out with somebody you just met that day?</string>
    <string name="no_way">No way</string>
    <string name="once_or_twice">Once Or Twice</string>
    <string name="maybe">Maybe</string>
    <string name="get_result">Get Result</string>
    <string name="your_result_will_appear_here">Your Result will appear here: </string>
    <string name="dog_or_cat_photo">Dog Or Cat Photo</string>
    <string name="temperature_converter">Temperature Converter</string>
    <string name="temperature_converter_app">Temperature Converter App</string>
    <string name="temperature_converter_image">Temperature Converter Image</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="converter_arrow">converter arrow</string>
    <string name="convert">Convert</string>
    <string name="reset">Reset</string>
    <string name="yat_group">YAT Group</string>
    <string name="passing_bio_data_app">Passing Bio Data APP</string>
    <string name="nadal">Nadal</string>
    <string name="rafael_nadal">Rafael Nadal</string>
    <string name="novak_djokovic">novak djokovic</string>
    <string name="main_title">Main title</string>
    <string name="media_app">Media APP</string>
    <string name="media_built_in">Media Built In</string>
    <string name="exoplayer">ExoPlayer</string>
    <string name="music">Music</string>
    <string name="test">Test</string>
    <string name="justin_bieber">Justin Bieber</string>
    <string name="test_click">test click</string>
    <string name="javatpoint_website">JavaTpoint Website</string>
    <string name="google_maps">Get Current Location</string>
    <string name="title_activity_maps">Map</string>
    <string name="connect_3_game">Connect 3 Game</string>
    <string name="winner">winner</string>
    <string name="play_again">Play Again</string>
    <string name="xo">XO</string>
    <string name="log_out">Log Out</string>
    <string name="pdf_view">Mobile Track PDF</string>
    <string name="chat_app">Chat APP</string>
    <string name="enter_your_message">Enter your Message</string>
    <string name="send_message">send Message</string>
    <string name="here_the_message_will_appear">Here the Message will appear</string>
    <string name="photomessage">PhotoMessage</string>
    <string name="time">Time</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="tools">Tools</string>
    <string name="entertainment">Entertainment</string>
    <string name="music_player">Music Player</string>
    <string name="video_player">Video Player</string>
</resources>