<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp"
        tools:context=".entertainment.ResaurantActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/what_do_you_want_to_order"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_20sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/buttons_design" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/chk_tea"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tea"
                        android:textSize="@dimen/_15sdp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_30sdp"
                        android:text="@string/_5"
                        android:textColor="@color/colorAccent" />

                    <CheckBox
                        android:id="@+id/chk_pepsi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pepsi"
                        android:textSize="@dimen/_15sdp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_30sdp"
                        android:text="@string/_10"
                        android:textColor="@color/colorAccent" />


                    <CheckBox
                        android:id="@+id/chk_coffe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/coffee"
                        android:textSize="@dimen/_15sdp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_30sdp"
                        android:text="@string/_7"
                        android:textColor="@color/colorAccent" />


                    <CheckBox
                        android:id="@+id/chk_Lemon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lemon"
                        android:textSize="@dimen/_15sdp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_30sdp"
                        android:text="@string/_15"
                        android:textColor="@color/colorAccent" />



            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/chk_pizza"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pizza"
                    android:textSize="@dimen/_15sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:text="@string/_70"
                    android:textColor="@color/colorAccent" />


                <CheckBox
                    android:id="@+id/chk_burger"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/burger"
                    android:textSize="@dimen/_15sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:text="@string/_50"
                    android:textColor="@color/colorAccent" />


                <CheckBox
                    android:id="@+id/chk_chicken"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chicken"
                    android:textSize="@dimen/_15sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:text="@string/_40"
                    android:textColor="@color/colorAccent" />


                <CheckBox
                    android:id="@+id/chk_vegetables"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vegetables"
                    android:textSize="@dimen/_15sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:text="@string/_30"
                    android:textColor="@color/colorAccent" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_orderNow"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/buttons_design"
            android:textColor="@color/whiteColor"
            android:text="@string/order_now" />

        <TextView
            android:id="@+id/tv_yourOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/your_order"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_15sdp" />

    </LinearLayout>
</ScrollView>
