<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:background="@color/background">


    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp"
        tools:context=".entertainment.DogOrCatActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:contentDescription="@string/dog_or_cat_photo"
            android:src="@drawable/dogorcat" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/when_talking_to_someone_do_you_maintain_eye_contact"
            android:textColor="@color/whiteColor"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radio_group1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_never"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/never" />

            <RadioButton
                android:id="@+id/radio_always"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:text="@string/always" />

            <RadioButton
                android:id="@+id/radio_someTimes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:text="@string/sometimes" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/buttons_design" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/how_often_do_you_hug_people"
            android:textColor="@color/whiteColor"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radio_group2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_all_the_times"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_the_times" />

            <RadioButton
                android:id="@+id/radio_someTimes2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:text="@string/sometimes" />

            <RadioButton
                android:id="@+id/radio_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:text="@string/no" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/buttons_design" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_30sdp"
            android:gravity="center"
            android:text="@string/have_you_ever_made_out_with_somebody_you_just_met_that_day"
            android:textColor="@color/whiteColor"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radio_group3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_no_way"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_way" />

            <RadioButton
                android:id="@+id/radio_once_or_twice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:text="@string/once_or_twice" />

            <RadioButton
                android:id="@+id/radio_maybe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:text="@string/maybe" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/buttons_design" />


        <Button
            android:id="@+id/btn_get_result"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/buttons_design"
            android:text="@string/get_result" />

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/your_result_will_appear_here"
            android:textColor="@color/whiteColor"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>