<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:padding="@dimen/_10sdp">

    <TextView
        android:id="@+id/txMessageUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="#000"
        android:textSize="@dimen/_13sdp" />

    <TextView
        android:id="@+id/txMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/edit_texts"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:text="@string/here_the_message_will_appear"
        android:textColor="@color/colorAccent" />

    <ImageView
        android:id="@+id/ivMessagePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:contentDescription="@string/photomessage"
        android:src="@drawable/addphoto" />

    <TextView
        android:id="@+id/timeMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:layout_marginTop="@dimen/_8sdp"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_10sdp" />


</LinearLayout>